--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -9,4 +9,4 @@
     name: vsftpd
     state: present
     update_cache: true
-  when: ansible_distribution_major_version > 5
+  when: ansible_distribution_major_version | int > 5
