Create proper os-specific vars files instead of setting them in tasks

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
-- include_tasks: "{{ ansible_os_family }}.yml"
+- name: Include os-specific variables
+  include_vars: vars/{{ ansible_os_family }}.yml
+
+- name: Include os-specific tasks
+  include_tasks: "{{ ansible_os_family }}.yml"
 
 - name: Ensure vsftpd is running and starts at boot
   service:
