--- a/molecule/default/group_vars/all.yml
+++ b/molecule/default/group_vars/all.yml
@@ -2,11 +2,10 @@
 vsftpd_pasv_min_port: '11000'
 vsftpd_pasv_max_port: '11999'
 vsftpd_pasv_address: 8.8.8.8   #  The public IP of your server.
-vsftpd_rsa_cert_file: ./certs/fullchain.pem
-vsftpd_rsa_private_key_file: ./certs/key
+vsftpd_rsa_cert_file: /usr/local/ssl/certs/snake-oil.pem
+vsftpd_rsa_private_key_file: /usr/local/ssl/private/snake-oil.key
 vsftpd_ini_config_extras: []  #  For anything additional config not already handled by the role. See defaults.yml.
 vsftpd_users:
  - username: ftptester
    password: password
    update_password: always
-
