--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,12 +1,7 @@
 ---
-- name: Set facts (Red Hat-ish)
-  set_fact:
-    vsftpd_conf_path: /etc/vsftpd/vsftpd.conf
-    priviledged_read_access_group: wheel
-
 - name: Install vsftpd on EL >= 6; EL 5 is too old for ansible Yum operations
   yum:
     name: vsftpd
     state: present
     update_cache: true
-  when: ansible_distribution_major_version > 5
+  when: ansible_distribution_major_version | int > 5
