--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
-- include_tasks: "{{ ansible_os_family }}.yml"
+- name: Include os-specific variables
+  include_vars: vars/{{ ansible_os_family }}.yml
+
+- name: Include os-specific tasks
+  include_tasks: "{{ ansible_os_family }}.yml"
 
 - name: Ensure vsftpd is running and starts at boot
   service:
@@ -35,7 +39,7 @@
     dest: /home/{{ item.username }}/ftp
     state: directory
     owner: nobody
-    group: nogroup
+    group: "{{ vsftpd_nobody_groupname }}"
     mode: '0555'
   with_items: "{{ vsftpd_users }}"
 
