--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -13,6 +13,9 @@ platforms:
     cgroupns_mode: host
     privileged: true
     pre_build_image: true
+    tmpfs:
+      - /run
+      - /tmp
 provisioner:
   name: ansible
   playbooks:
