--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,13 +8,11 @@ platforms:
     image: ${MOLECULE_DOCKER_IMAGE:-'geerlingguy/docker-rockylinux8-ansible:latest'}
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
       - /var/lib/containerd
     cgroupns_mode: host
     privileged: true
     pre_build_image: true
-    capabilities:
-      - SYS_ADMIN
 provisioner:
   name: ansible
   playbooks:
