Try educating molecule about where to create tmp files

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -18,5 +18,8 @@ platforms:
       - /tmp
 provisioner:
   name: ansible
+  config_options:
+    defaults:
+      remote_tmp: /tmp
   playbooks:
     converge: ${MOLECULE_PLAYBOOK:-converge.yml}
