--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -1,13 +1,16 @@
 ---
 on:
-  # Trigger the workflow on push or pull request,
-  # but only for the main branch
+  pull_request:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
+  schedule:
+    - cron: "6 6 6 * *"   # Test once / month
+
+defaults:
+  run:
+    working-directory: "acromedia.vsftpd"
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -15,32 +18,73 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
         with:
-          path: "${{ github.repository }}"
-      - name: molecule
-        uses: robertdebock/molecule-action@2.6.3
+          path: "acromedia.vsftpd"
+
+      - name: Set up Python 3.
+        uses: actions/setup-python@v2
         with:
-          command: lint
-  test:
-    needs:
-      - lint
+          python-version: '3.x'
+
+      - name: Install test dependencies.
+        run: pip3 install yamllint
+
+      - name: Lint code
+        run: yamllint .
+
+  molecule:
+    name: Molecule
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image:
-          - geerlingguy/docker-ubuntu2204-ansible:latest
-          - geerlingguy/docker-ubuntu2004-ansible:latest
-          - geerlingguy/docker-ubuntu1804-ansible:latest
-          - geerlingguy/docker-rockylinux9-ansible:latest
-          - geerlingguy/docker-rockylinux8-ansible:latest
+        distro:
+          - rockylinux9
+          - rockylinux8
+          - ubuntu2204
+          - ubuntu2004
+          - ubuntu1804
+
     steps:
-      - name: checkout
+      - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: "${{ github.repository }}"
-      - name: molecule
-        uses: robertdebock/molecule-action@2.6.3
+          path: 'acromedia.vsftpd'
+
+      - name: Set up Python 3.
+        uses: actions/setup-python@v2
         with:
-          image: "${{ matrix.image }}"
-          options: parallel
+          python-version: '3.x'
+
+      - name: Install test dependencies.
+        run: pip3 install ansible molecule molecule-plugins[docker] docker
+
+      - name: Run Molecule tests.
+        run: molecule test
         env:
-          MOLECULE_DOCKER_IMAGE: "${{ matrix.image }}"
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          MOLECULE_DISTRO: ${{ matrix.distro }}
+
+#  test:
+#    needs:
+#      - lint
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        image:
+#          - geerlingguy/docker-ubuntu2204-ansible:latest
+#          - geerlingguy/docker-ubuntu2004-ansible:latest
+#          - geerlingguy/docker-ubuntu1804-ansible:latest
+#          - geerlingguy/docker-rockylinux9-ansible:latest
+#          - geerlingguy/docker-rockylinux8-ansible:latest
+#    steps:
+#      - name: checkout
+#        uses: actions/checkout@v2
+#        with:
+#          path: "${{ github.repository }}"
+#      - name: molecule
+#        uses: robertdebock/molecule-action@2.6.3
+#        with:
+#          image: "${{ matrix.image }}"
+#          options: parallel
+#        env:
+#          MOLECULE_DOCKER_IMAGE: "${{ matrix.image }}"
