--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -37,11 +37,11 @@ jobs:
     strategy:
       matrix:
         distro:
-          - rockylinux9
-          - rockylinux8
-          - ubuntu2204
-          - ubuntu2004
-          - ubuntu1804
+          - geerlingguy/docker-rockylinux9-ansible
+          - geerlingguy/docker-rockylinux8-ansible
+          - geerlingguy/docker-ubuntu2204-ansible
+          - geerlingguy/docker-ubuntu2004-ansible
+          - geerlingguy/docker-ubuntu1804-ansible
 
     steps:
       - name: Check out the codebase.
