--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -7,21 +7,15 @@ on:
   schedule:
     - cron: "6 6 6 * *"   # Test once / month
 
-defaults:
-  run:
-    working-directory: "${{ github.repository }}"
-
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-        with:
-          path: "${{ github.repository }}"
+      - name: Check out the codebase
+        uses: actions/checkout@v4
 
       - name: Set up Python 3.
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
@@ -45,12 +39,10 @@ jobs:
 
     steps:
       - name: Check out the codebase.
-        uses: actions/checkout@v2
-        with:
-          path: "${{ github.repository }}"
+        uses: actions/checkout@v4
 
       - name: Set up Python 3.
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
