Now that test pass, specify which versions are supported

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,7 +9,12 @@ galaxy_info:
   role_name: vsftpd
   platforms:
     - name: Ubuntu
-      versions: []  #  @TODO: Define supported versions
+      versions:
+        - jammy
+        - focal
+        - bionic
     - name: EL
-      versions: []  #  @TODO: Define supported versions
+      versions:
+        - 9
+        - 8
 dependencies: []
