--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        distro:
+        image:
           - geerlingguy/docker-rockylinux9-ansible
           - geerlingguy/docker-rockylinux8-ansible
           - geerlingguy/docker-ubuntu2204-ansible
@@ -64,4 +64,4 @@ jobs:
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
-          MOLECULE_DISTRO: ${{ matrix.distro }}
+          MOLECULE_DISTRO: ${{ matrix.image }}
