Fix failing molecule tests (#3)
* Fix error while testing molecule (attempt 1)

* Drop 16.04, add 22.04

* Switch default image

* Tell container about tmp dirs

* Switch to Rocky instead of CentOS, drop 7, add 9

* Add capabilities

* Remove tmp dir spec

* Switch cgroup volume writeable

* Try fixing error 'Failed to create temporary directory'

* Try educating molecule about where to create tmp files

* Try matching Jeff's setup, which works.

* Fix broken paths

* Fix broken image references

* Add lint config

* Try fixing actions

* Fix yamllint errors

* Remove dead code

* Auto-cancel previous action when a new push is made

* Fix wrong indentation

* Make workflow run reflect the associated commit message

* Fix truthy warnings

* Fix unquoted literal value

* Now that test pass, specify which versions are supported

* Remove command that doesn't do anything

* Put original names back for diff readability

* Readability

* Readability

* Explicity specify tag

* Woops, have we been testing only rocky 8 for all runs? :grimace:

* Readability

* Readability

* Give the workflow a name

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -1,46 +1,69 @@
 ---
-on:
-  # Trigger the workflow on push or pull request,
-  # but only for the main branch
+name: Molecule Tests
+
+'on':
+  # Automatically test once per month
+  schedule:
+    - cron: "6 6 6 * *"
+
+  # Only test pushes if they were directly to main branch
   push:
     branches:
       - master
+
+  # Test all pull request actions.
   pull_request:
-    branches:
-      - master
+
+# Auto-cancel runs from previous pushes in the same branch.
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
+      - name: Check out the codebase
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.
+        uses: actions/setup-python@v4
         with:
-          path: "${{ github.repository }}"
-      - name: molecule
-        uses: robertdebock/molecule-action@2.6.3
-        with:
-          command: lint
+          python-version: '3.x'
+
+      - name: Install test dependencies.
+        run: pip3 install yamllint
+
+      - name: Lint code
+        run: yamllint .
+
   test:
-    needs:
-      - lint
+    name: Molecule
     runs-on: ubuntu-latest
     strategy:
       matrix:
         image:
+          - geerlingguy/docker-ubuntu2204-ansible:latest
           - geerlingguy/docker-ubuntu2004-ansible:latest
           - geerlingguy/docker-ubuntu1804-ansible:latest
-          - geerlingguy/docker-ubuntu1604-ansible:latest
-          - geerlingguy/docker-centos8-ansible:latest
-          - geerlingguy/docker-centos7-ansible:latest
+          - geerlingguy/docker-rockylinux9-ansible:latest
+          - geerlingguy/docker-rockylinux8-ansible:latest
+
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
+      - name: Check out the codebase.
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.
+        uses: actions/setup-python@v4
         with:
-          path: "${{ github.repository }}"
-      - name: molecule
-        uses: robertdebock/molecule-action@2.6.3
-        with:
-          image: "${{ matrix.image }}"
-          options: parallel
+          python-version: '3.x'
+
+      - name: Install test dependencies.
+        run: pip3 install ansible molecule molecule-plugins[docker] docker
+
+      - name: Run Molecule tests.
+        run: molecule test
         env:
           MOLECULE_DOCKER_IMAGE: "${{ matrix.image }}"
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
